# learning_buddy

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
agent/: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  auth.py  cache.py  cleaning_rules.yml  conftest.py  db.py  embed.py  evaluate.py  http_client.py  llm.py  main.py  models.py  pipeline.py  pyproject.toml  rag.py  requirements.txt  retrieval.py  ruff.toml  schemas.py  storage.py
agent/core/: auth.py  cache.py  config.py  db.py  http_client.py  storage.py  utils.py
agent/rag/: orchestrator.py  pipeline.py  retrieval.py
agent/services/: embed.py  llm.py
agent/tests/: conftest.py  test_auth.py  test_cache.py  test_contract.py  test_db.py  test_embed.py  test_evaluate.py  test_http_client.py  test_pipeline.py  test_resilience.py  test_retrieval.py  test_retrieve.py
backend/: .air.toml  .dockerignore  .env.example  .golangci.yml  Dockerfile  Dockerfile.dev  README.md  go.mod  go.sum  main.go
backend/migrations/: 0001_init.sql  0002_seed.sql  0003_fix_sequences.sql  0004_embedding_1024.sql  0005_material_chunks_idempotency.sql  0008_rag_v2.sql  (+7 more)
docs/: api-reference.md  autonomous-rag-iteration-report-2026-07-18.md  database.md  engineering-standards.md  openapi.yaml  prd-security-reliability.md  prd.md  rag-v2-production.md  system-design-en.md  system-design.md  testing.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+95 files in other folders)
